eoconv NEWS -- history of user-visible changes

Copyright (C) 2004-2016 Tristan Miller.  See the end of this file for
copying conditions.


Version 1.5-SNAPSHOT

* Remove deprecated encoding pragma

Version 1.4

* Rereleased under the GNU General Public License v3.0
* Various minor changes to the internal code and documentation

Version 1.3.1

* Corrected some typos in the documentation

Version 1.3

* Added support for postfix-H, postfix-X, and LaTeX notation
* utf-7, utf-8, utf-16, and utf-32 are now aliases for utf7, etc.
* Many encodings now have aliases with varying capitalization
* Corrected the version number in the --version output
* Expanded documentation for the ISO-8859-3 encoding
* Added `See also' section to documentation

Version 1.2

* Fixed a minor bug hindering batch handling of files from any textual
  encoding to Unicode
* Corrected a misprint in the NEWS file

Version 1.1

* Fixed a minor bug where the --version option did not work

Version 1.0

* Fixed bug in postfix-h notation where `u'-breve was incorrectly
  transliterated to `uh'
* Significantly expanded and revised documentation
* Expanded and revised installation instructions
* Added warning for postfix-h notation
* Added --quiet option to suppress warnings

Version 0.90

* Initial release

----------------------------------------------------------------------
Copyright information:

Copyright (C) 2004-2016 Tristan Miller.

   Permission is granted to anyone to make or distribute verbatim
   copies of this document as received, in any medium, provided that
   the copyright notice and this permission notice are preserved, thus
   giving the recipient permission to redistribute in turn.

   Permission is granted to distribute modified versions of this
   document, or of portions of it, under the above conditions,
   provided also that they carry prominent notices stating who last
   changed them.